--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
 			<version>2.3.9.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
