configured email sending with amazon SES, TO addresses must be verified (SES account in sandbox mode). Credentials stored in env vars will pgp them to you josh

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
 
   mail:
-    host: localhost
-    port: 1025
-    username: hello
-    password: hello
+    host: email-smtp.us-east-2.amazonaws.com
+    port: 587
+    username: ${SES}
+    password: ${SES_PW}
 
     properties:
       mail:
